--- a/Harshu_Love_Website/index.html
+++ b/Harshu_Love_Website/index.html
@@ -3,13 +3,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>For My Panda Princess 💖</title>
+    <title>For My Panda Princess Harshuuu💖</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="hearts"></div>
     <header>
-        <h1>💕 Welcome to Your Love Land 💕</h1>
+        <h1>💕 Welcome to Your Love Land Harshu baby 💕</h1>
         <p>Click around and explore surprises made just for you!</p>
         <nav>
             <a href="quiz.html">Love Quiz</a>
