--- a/Harshu_Love_Website/quiz.html
+++ b/Harshu_Love_Website/quiz.html
@@ -16,7 +16,7 @@
             <label>3. Our dream destination together?</label><input type="text"><br>
             <label>4. What’s our favorite thing to do?</label><input type="text"><br>
             <button type="button" onclick="showResult()">Submit</button>
-            <div class="result" id="quizResult">💖 You're the only answer that matters 💖</div>
+            <div class="result" id="quizResult">💖 You're the only answer that matters Harshuu💖</div>
         </form>
     </section>
     <script>
